Mirror modifier lost UV offset only #78269

Closed
opened 2020-06-25 21:18:09 +02:00 by Nahuel Belich · 11 comments

System Information
Operating system: Linux-5.4.0-39-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-20 04:49, hash: d994391e0c
Worked: 4d790516fb

Short description of error
In the lastest 2.9 builds offset for uvs its only for mirrored uvs and those should be two different options as in 2.8.
Offset its mainly used to avoid baking errors with overlap uvs by moving the uv's outside off the 0 to 1 uv space but not mirrored only offset.
image.png

in 2.8 an early 2.9, before the drag-able modifiers where added, offset where different for mirrored and for just plain offset
image.png
image.png

Exact steps for others to reproduce the error
Offset bug.blend

**System Information** Operating system: Linux-5.4.0-39-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-20 04:49, hash: `d994391e0c` Worked: 4d790516fbf8 **Short description of error** In the lastest 2.9 builds offset for uvs its only for mirrored uvs and those should be two different options as in 2.8. Offset its mainly used to avoid baking errors with overlap uvs by moving the uv's outside off the 0 to 1 uv space but not mirrored only offset. ![image.png](https://archive.blender.org/developer/F8644097/image.png) in 2.8 an early 2.9, before the drag-able modifiers where added, offset where different for mirrored and for just plain offset ![image.png](https://archive.blender.org/developer/F8644108/image.png) ![image.png](https://archive.blender.org/developer/F8644110/image.png) **Exact steps for others to reproduce the error** [Offset bug.blend](https://archive.blender.org/developer/F8644102/Offset_bug.blend)
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

#78305 was marked as duplicate of this issue

#78305 was marked as duplicate of this issue
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, caused by 9b099c8612

Can confirm, caused by 9b099c8612
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member
CC @HooglyBoogly

Added subscriber: @EugenioPignataro

Added subscriber: @EugenioPignataro
Member

Added subscriber: @DotBow

Added subscriber: @DotBow
Hans Goudey self-assigned this 2020-06-26 15:35:59 +02:00

This issue was referenced by 26d0fb3aef

This issue was referenced by 26d0fb3aef94a087c2bb05badc64274050ef3779
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78269
No description provided.