Fix T78269: Mirror modifier lost UV offset only

Also fixed an issue with a decorator in the same subpanel